--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@inquirer/prompts": "^3.3.0",
     "@types/handlebars-helpers": "^0.5.6",
+    "chalk": "^4.1.2",
     "handlebars": "^4.7.8"
   },
   "devDependencies": {
